# sysml-cookiecutter

./: CHANGELOG.md  README.md  cookiecutter.json  pyproject.toml
docs/: advanced-setup.md  developing.md  getting-started.md
hooks/: post_gen_project.py  pre_gen_project.py
{{ cookiecutter.project_slug }}/: .gitignore  README.md  pyproject.toml
{{ cookiecutter.project_slug }}/.github/workflows/: ci.yml
{{ cookiecutter.project_slug }}/docs/: developing.md
{{ cookiecutter.project_slug }}/licenses/: GPL-3.0.txt  proprietary.txt
