[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sysml-cookiecutter"
version = "0.2.0"
description = 'Cookiecutter template for SysML v2 projects with sysmlpy automation and sysml-style linting.'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["sysml", "sysmlv2", "cookiecutter", "template", "mbse"]
authors = [
  { name = "Jon R. Fox", email = "jon.fox@drfox.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/jfox/sysml-cookiecutter#readme"
Issues = "https://github.com/jfox/sysml-cookiecutter/issues"
Source = "https://github.com/jfox/sysml-cookiecutter"


[tool.hatch.envs.default]
dependencies = [
]


#### DOCS ####

[tool.hatch.envs.docs]
dependencies = [
  "mkdocs-material",
  "mkdocs-git-revision-date-localized-plugin",
  "mkdocs-git-authors-plugin",
  "mkdocs-glightbox",
  "scriv",
]
[tool.hatch.envs.docs.scripts]
new = "mkdocs new ."
build = "mkdocs build --strict --clean --verbose"
buildtest = "mkdocs build --strict --clean --verbose --site-dir doctest"
serve = "mkdocs serve --dev-addr localhost:8000"

[tool.scriv]
format = "md"
new_fragment_template = "file: new_fragment_custom.md.j2"
version = "literal: pyproject.toml: project.version"
entry_title_template = "v{% if version %}{{ version }} — {% endif %}{{ date.strftime('%Y-%m-%d') }}"

#### TYPING ####

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:tests}"


#### LINTING ####

# hatch now has a default "hatch-static-analysis" environment. 

#### TESTING #### 

# hatch now has a default "hatch-test" environment. The user does not need to create a 
# custom environment. Set some extra settings:

[tool.hatch.envs.hatch-test]
randomize = true
parallel = true

# default settings from hatch inititialisation

[tool.coverage.run]
source_pkgs = ["tests"]
branch = true
parallel = true
omit = []

[tool.coverage.paths]
tests = ["tests", "*/sysml-cookiecutter/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
