[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{ cookiecutter.project_name }}"
dynamic = ["version"]
description = '{{ cookiecutter.project_short_description }}'
readme = "README.md"
requires-python = ">=3.10"
license = "{{ cookiecutter.license }}"
keywords = ["sysml", "sysmlv2", "mbse", "systems-engineering"]
authors = [
  { name = "{{ cookiecutter.author }}", email = "{{ cookiecutter.email }}" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "sysmlpy>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "sysml-style>=0.3.7",
  "pytest>=8.0",
  "mypy>=1.0.0",
  "pre-commit",
]

[project.urls]
Documentation = "{{ cookiecutter.repo_url }}#readme"
Issues = "{{ cookiecutter.repo_url }}/issues"
Source = "{{ cookiecutter.repo_url }}"

[tool.hatch.version]
path = "src/{{ cookiecutter.project_slug }}/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "sysmlpy>=0.35.0",
  "sysml-style>=0.3.7",
  "jupyter",
  "pytest>=8.0",
  "mypy>=1.0.0",
  "pre-commit",
]

[tool.hatch.envs.default.scripts]
check = "sysml-style check sysml/models/*.sysml"
format = "sysml-style format sysml/models/*.sysml"
format-check = "sysml-style format --check sysml/models/*.sysml"
analyze = "python -m {{ cookiecutter.project_slug }}.examples.analyze_model"
render = "python -m {{ cookiecutter.project_slug }}.examples.render_diagrams"
test = "pytest {args:tests}"
typecheck = "mypy --install-types --non-interactive {args:src/{{ cookiecutter.project_slug }} tests}"
jupyter = "jupyter lab"

[tool.sysml-style]
max_line_length = 120
indent_size = 4
ignore = []
naming_convention = "{{ cookiecutter.sysml_naming_convention }}"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/{{ cookiecutter.project_slug }} tests}"

[tool.coverage.run]
source_pkgs = ["{{ cookiecutter.project_slug }}", "tests"]
branch = true
parallel = true
omit = [
  "src/{{ cookiecutter.project_slug }}/__about__.py",
]

[tool.coverage.paths]
{{ cookiecutter.project_slug }} = ["src/{{ cookiecutter.project_slug }}", "*/{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}"]
tests = ["tests", "*/{{ cookiecutter.project_slug }}/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
